# nRF9160-work

./: prj.conf  readme.md
blink-plus-uart/: .gitignore  CMakeLists.txt  Kconfig.kx132-1211  app.overlay  prj.conf
blink-plus-uart/drivers/: CMakeLists.txt  Kconfig
blink-plus-uart/drivers/kionix/: Kconfig
blink-plus-uart/drivers/kionix/kx132-1211/: Kconfig  kx132-1211.c  kx132-1211.h
blink-plus-uart/drivers/kx132/: CMakeLists.txt
blink-plus-uart/drivers/kx132-1211/: CMakeLists.txt
blink-plus-uart/src/: main.c
blink-plus-uart/zephyr/: module.yml
driver-work-v2/: CMakeLists.txt  Kconfig  README.md
driver-work-v2/drivers/: CMakeLists.txt  Kconfig
driver-work-v2/drivers/kionix/: CMakeLists.txt  Kconfig
driver-work-v2/drivers/kionix/kx132-1211/: CMakeLists.txt  Kconfig
driver-work-v2/dts/bindings/: kionix,kx132-1211.yml
driver-work-v2/include/: driver-work-v2.h
kionix-work/: CMakeLists.txt  Kconfig  west.yml
kionix-work/app/: CMakeLists.txt  Kconfig  kionix_work_version.h.in  prj.conf
kionix-work/app/src/: main.c
kionix-work/drivers/: CMakeLists.txt  Kconfig
kionix-work/drivers/kionix/: CMakeLists.txt  Kconfig
kionix-work/drivers/kionix/kx132-1211/: CMakeLists.txt  Kconfig
kionix-work/zephyr/: module.yml
src/: main.c
